# scaling-potato

./: .gitignore  CMakeLists.txt  README.md  setup.py
cython_debug/: cython_debug_info_scaling_potato_c
exp/: main.cpp
scaling_potato/: __init__.py  panda_app.py  pid_control.py  quadcopter.py  world.py
scaling_potato/blender/: cube.blend  pilon.blend  plane.blend  plane.blend1  scene.blend
scaling_potato/scaling_potato_c/: Camera.pxi  scaling_potato_c.pyx
scaling_potato/scaling_potato_c/cpp_code/: Camera.cpp  Camera.h  test_opencv.cpp  test_opencv.h
test/python/: __init__.py  test_cpp_extension.py  test_quadcopter.py
